<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2016-2017 Aya Tokikaze. All Rights Reserved.
  -->
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

  <item
      android:id="@+id/nav_library"
      android:icon="@drawable/ic_book_black_24_vector"
      android:title="@string/library"/>

  <item
      android:id="@+id/nav_bookmark"
      android:icon="@drawable/ic_bookmark_black_24_vector"
      android:title="@string/bookmark"/>

  <item
      android:id="@+id/nav_ranking"
      android:icon="@drawable/ic_trending_up_black_24_vector"
      android:title="@string/ranking"/>

  <!--<item-->
      <!--android:id="@+id/nav_search"-->
      <!--android:icon="@drawable/ic_search_black_24_vector"-->
      <!--android:title="@string/search"/>-->

  <item
      android:id="@+id/nav_settings"
      android:icon="@drawable/ic_settings_black_24_vector"
      android:title="@string/setting"/>

</menu>
