<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2016-2018 ayatk.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
        name="viewModel"
        type="com.ayatk.biblio.ui.home.ranking.RankingViewModel"/>
  </data>

  <android.support.v4.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/space_8dp"
          android:layout_marginEnd="-2dp"
          android:layout_marginStart="-2dp"
          android:layout_marginTop="@dimen/space_8dp"
          app:cardCornerRadius="0dp"
          app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:showDividers="middle">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/space_16dp"
              android:text="@string/ranking_daily"
              android:textSize="@dimen/text_16sp"/>

          <LinearLayout
              android:id="@+id/ranking_container"
              android:layout_width="match_parent"
              android:layout_height="300dp"
              android:divider="@drawable/divider"
              android:orientation="vertical"
              android:showDividers="middle"
              app:addRankingItems="@{viewModel.daily}"/>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/space_8dp"
              android:gravity="end"
              android:orientation="horizontal">

            <Button
                android:id="@+id/daily_read_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/ranking_read_more"
                android:textColor="@color/app_blue"/>

          </LinearLayout>

        </LinearLayout>

      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/space_8dp"
          android:layout_marginEnd="-2dp"
          android:layout_marginStart="-2dp"
          android:layout_marginTop="@dimen/space_8dp"
          app:cardCornerRadius="0dp"
          app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:showDividers="middle">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/space_16dp"
              android:text="@string/ranking_weekly"
              android:textSize="@dimen/text_16sp"/>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="300dp"
              android:divider="@drawable/divider"
              android:orientation="vertical"
              android:showDividers="middle"
              app:addRankingItems="@{viewModel.weekly}"/>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/space_8dp"
              android:gravity="end"
              android:orientation="horizontal">

            <Button
                android:id="@+id/weekly_read_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/ranking_read_more"
                android:textColor="@color/app_blue"/>

          </LinearLayout>

        </LinearLayout>

      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/space_8dp"
          android:layout_marginEnd="-2dp"
          android:layout_marginStart="-2dp"
          android:layout_marginTop="@dimen/space_8dp"
          app:cardCornerRadius="0dp"
          app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:showDividers="middle">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/space_16dp"
              android:text="@string/ranking_monthly"
              android:textSize="@dimen/text_16sp"/>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="300dp"
              android:divider="@drawable/divider"
              android:orientation="vertical"
              android:showDividers="middle"
              app:addRankingItems="@{viewModel.monthly}"/>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/space_8dp"
              android:gravity="end"
              android:orientation="horizontal">

            <Button
                android:id="@+id/monthly_read_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/ranking_read_more"
                android:textColor="@color/app_blue"/>

          </LinearLayout>

        </LinearLayout>

      </android.support.v7.widget.CardView>

      <android.support.v7.widget.CardView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginBottom="@dimen/space_8dp"
          android:layout_marginEnd="-2dp"
          android:layout_marginStart="-2dp"
          android:layout_marginTop="@dimen/space_8dp"
          app:cardCornerRadius="0dp"
          app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider"
            android:orientation="vertical"
            android:showDividers="middle">

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/space_16dp"
              android:text="@string/ranking_quarter"
              android:textSize="@dimen/text_16sp"/>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="300dp"
              android:divider="@drawable/divider"
              android:orientation="vertical"
              android:showDividers="middle"
              app:addRankingItems="@{viewModel.quarter}"/>

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="@dimen/space_8dp"
              android:gravity="end"
              android:orientation="horizontal">

            <Button
                android:id="@+id/quarter_read_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?attr/selectableItemBackground"
                android:padding="8dp"
                android:text="@string/ranking_read_more"
                android:textColor="@color/app_blue"/>

          </LinearLayout>

        </LinearLayout>

      </android.support.v7.widget.CardView>

    </LinearLayout>

  </android.support.v4.widget.NestedScrollView>

</layout>
